--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,11 +35,15 @@ jobs:
           files: |
             Dockerfile
             app/*
+            .github/*
 
   build_publish:
     name: "Build Docker Image with new Tag"
     runs-on: ubuntu-latest
     needs: init
+    outputs:
+      - new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      - previous_tag: ${{ steps.tag_version.outputs.previous_tag }}
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b
@@ -106,7 +110,7 @@ jobs:
     name: "Create Release for New Git Tag"
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: tag_version
+    needs: build_publish
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v4.1.6
@@ -116,14 +120,14 @@ jobs:
         uses: metcalfc/changelog-generator@v4.3.1
         with:
           myToken: ${{ secrets.GITHUB_TOKEN }}
-          head-ref: "${{ needs.tag_version.outputs.new_tag }}"
-          base-ref: "${{ needs.tag_version.outputs.previous_tag }}"
+          head-ref: "${{ needs.build_publish.outputs.new_tag }}"
+          base-ref: "${{ needs.build_publish.outputs.previous_tag }}"
 
       - name: "Create Release"
         id: create_release
         uses: ncipollo/release-action@v1.14.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ needs.tag_version.outputs.new_tag }}
-          name: Release ${{ needs.tag_version.outputs.new_tag }}
+          tag: ${{ needs.build_publish.outputs.new_tag }}
+          name: Release ${{ needs.build_publish.outputs.new_tag }}
           body: ${{ steps.changelog.outputs.changelog }}
