--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,8 +40,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: init
     outputs:
-      - new_tag: ${{ steps.tag_version.outputs.new_tag }}
-      - previous_tag: ${{ steps.tag_version.outputs.previous_tag }}
+      new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      previous_tag: ${{ steps.tag_version.outputs.previous_tag }}
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b
