--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -65,17 +65,17 @@ jobs:
         if: github.event.pull_request.merged == true
         run: echo "previous_tag=${{ steps.tag_version.outputs.previous_tag }}" >> $GITHUB_OUTPUT
 
-      - name: "Login to Azure CLI"
-        uses: azure/login@6c251865b4e6290e7b78be643ea2d005bc51f69a
-        with:
-          client-id: ${{ vars.SHARED_OWNER_APP_ID }}
-          tenant-id: ${{ vars.AZ_TENANT_ID }}
-          subscription-id: ${{ vars.AZ_SHARED_SUBSCRIPTION_ID }}
+      # - name: "Login to Azure CLI"
+      #   uses: azure/login@6c251865b4e6290e7b78be643ea2d005bc51f69a
+      #   with:
+      #     client-id: ${{ vars.SHARED_OWNER_APP_ID }}
+      #     tenant-id: ${{ vars.AZ_TENANT_ID }}
+      #     subscription-id: ${{ vars.AZ_SHARED_SUBSCRIPTION_ID }}
 
-      - name: "Login to shared ACR"
-        run: |
-          echo -e "📡 \033[1mLogging in to shared ACR ... \e[0m"
-          az acr login --name ${SHARED_ACR}
+      # - name: "Login to shared ACR"
+      #   run: |
+      #     echo -e "📡 \033[1mLogging in to shared ACR ... \e[0m"
+      #     az acr login --name ${SHARED_ACR}
 
       - name: "Build Docker image"
         id: image_version
