--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,8 +7,8 @@ permissions:
 
 on:
   push:
-    branches:
-      - '!main'
+    branches-ignore:
+      - main
     paths-ignore:
       - ".github/**"
 
